--- a/package.json
+++ b/package.json
@@ -24,10 +24,16 @@
     "babel-preset-stage-2": "^6.5.0",
     "eslint": ">=3.0.0",
     "jest-cli": "^15.1.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-select": "^1.0.0-rc.2",
     "standard": "*"
   },
   "peerDependencies": {
-    "moment": "^2.17.1"
+    "moment": "^2.17.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-select": "^1.0.0-rc.2"
   },
   "dependencies": {
     "autobind-decorator": "^1.3.4",
