--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "orionsoft-parts",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "main": "index.js",
   "repository": "http://github.com/orionsoft/parts",
   "author": "nicolaslopezj",
@@ -38,6 +38,8 @@
   "dependencies": {
     "autobind-decorator": "^1.3.4",
     "lodash": "^4.17.3",
+    "object-path": "^0.11.3",
+    "react-icons": "^2.2.3",
     "reactcss": "^1.1.1"
   }
 }
