--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "orionsoft-parts",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "main": "index.js",
   "repository": "http://github.com/orionsoft/parts",
   "author": "nicolaslopezj",
@@ -40,6 +40,7 @@
     "lodash": "^4.17.3",
     "object-path": "^0.11.3",
     "react-icons": "^2.2.3",
+    "react-notification-system": "^0.2.11",
     "reactcss": "^1.1.1"
   }
 }
