--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "orionsoft-parts",
-  "version": "1.2.16",
+  "version": "1.2.17",
   "main": "index.js",
   "repository": "http://github.com/orionsoft/parts",
   "author": "nicolaslopezj",
   "license": "MIT",
   "scripts": {
     "build": "rm -rf ./lib && babel ./src --out-dir ./lib && yarn run build-styles",
-    "build-styles": "find src/ -name '*.less' -exec lessc {} \\; > ./lib/styles.css",
+    "build-styles": "rm ./lib/styles.css && find src/ -name '*.less' -exec lessc {} \\; > ./lib/styles.css",
     "prepublish": "yarn run build",
     "test": "yarn run lint && jest",
     "watch": "watch yarn\\ run\\ build ./src",
