--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "build-styles": "find src/ -name '*.less' -exec lessc {} \\; > ./lib/styles.css",
     "prepublish": "yarn run build",
     "test": "yarn run lint && jest",
-    "watch": "watch yarn\\ run\\ build ./src",
-    "watch:js": "babel --watch ./src --out-dir ./lib",
-    "watch:less": "watch yarn\\ run\\ build-styles ./src",
+    "watch": "node watch.js",
     "test-watch": "jest --watch",
     "lint": "standard \"src/**/*.js\""
   },
