--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "orionsoft-parts",
-  "version": "1.2.21",
+  "version": "1.2.23",
   "main": "index.js",
   "repository": "http://github.com/orionsoft/parts",
   "author": "nicolaslopezj",
@@ -48,6 +48,7 @@
     "react-icons": "^2.2.3",
     "react-ios-switch": "^0.1.10",
     "react-notification-system": "^0.2.11",
+    "react-tooltip": "^3.2.3",
     "reactcss": "^1.1.1"
   }
 }
