--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "react-icons": "^2.2.3",
     "react-ios-switch": "^0.1.10",
     "react-notification-system": "^0.2.11",
-    "reactcss": "^1.1.1"
+    "react-sortable-hoc": "^0.5.0",
+    "reactcss": "^1.1.1",
+    "simple-react-form": "^1.8.1"
   }
 }
