--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "orionsoft-parts",
-  "version": "1.2.37",
+  "version": "1.3.1",
   "main": "index.js",
   "repository": "http://github.com/orionsoft/parts",
   "author": "nicolaslopezj",
   "license": "MIT",
   "scripts": {
     "build": "rm -rf ./lib && babel ./src --out-dir ./lib && yarn run build-styles",
-    "build-styles": "find src/ -name '*.less' -exec lessc {} \\; > ./lib/styles.css",
+    "build-styles": "find src/ -name '*.less' ! -name '*import.less' -exec lessc {} \\; > ./lib/styles.css",
     "prepublish": "yarn run build",
     "test": "yarn run lint && jest",
     "watch": "node watch.js",
@@ -15,22 +15,23 @@
     "lint": "standard \"src/**/*.js\""
   },
   "devDependencies": {
-    "babel-cli": "6.5.1",
+    "babel-cli": "^6.24.0",
     "babel-eslint": "^7.0.0",
-    "babel-jest": "^15.0.0",
+    "babel-jest": "^19.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "6.5.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-2": "^6.5.0",
-    "eslint": ">=3.0.0",
-    "jest-cli": "^15.1.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "colors": "^1.1.2",
+    "eslint": "^3.17.1",
+    "jest-cli": "^19.0.2",
     "less": "^2.7.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.1",
-    "react-select": "^1.0.0-rc.2",
-    "standard": "*"
+    "react-select": "1.0.0-rc.2",
+    "standard": "^9.0.1"
   },
   "peerDependencies": {
     "moment": "^2.17.1",
@@ -49,8 +50,8 @@
     "react-ios-switch": "^0.1.10",
     "react-notification-system": "^0.2.11",
     "react-sortable-hoc": "^0.5.0",
-    "simple-react-form": "^1.8.1",
     "react-tooltip": "^3.2.3",
-    "reactcss": "^1.1.1"
+    "reactcss": "^1.1.1",
+    "simple-react-form": "^1.8.1"
   }
 }
