--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "orionsoft-parts",
-  "version": "1.3.2",
+  "version": "1.4.0",
   "main": "index.js",
   "repository": "http://github.com/orionsoft/parts",
   "author": "nicolaslopezj",
@@ -15,6 +15,7 @@
     "lint": "standard \"src/**/*.js\""
   },
   "devDependencies": {
+    "apollo-client": "^1.0.1",
     "babel-cli": "^6.24.0",
     "babel-eslint": "^7.0.0",
     "babel-jest": "^19.0.0",
@@ -25,17 +26,24 @@
     "babel-preset-stage-2": "^6.22.0",
     "colors": "^1.1.2",
     "eslint": "^3.17.1",
+    "graphql-tag": "^2.0.0",
     "jest-cli": "^19.0.2",
     "less": "^2.7.2",
     "react": "^15.4.2",
+    "react-apollo-decorators": "^1.2.1",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.1",
     "react-select": "1.0.0-rc.2",
-    "standard": "^9.0.1"
+    "standard": "^9.0.1",
+    "react-apollo": "^1.0.0"
   },
   "peerDependencies": {
+    "apollo-client": "^1.0.1",
+    "graphql-tag": "^2.0.0",
     "moment": "^2.17.1",
     "react": "^15.4.2",
+    "react-apollo": "^1.0.0",
+    "react-apollo-decorators": "^1.2.1",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.1",
     "react-select": "^1.0.0-rc.2"
