--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "orionsoft-parts",
-  "version": "1.4.4",
+  "version": "1.5.0",
   "main": "index.js",
   "repository": "http://github.com/orionsoft/parts",
   "author": "nicolaslopezj",
@@ -15,27 +15,27 @@
     "lint": "standard \"src/**/*.js\""
   },
   "devDependencies": {
-    "apollo-client": "^1.0.1",
-    "babel-cli": "^6.24.0",
-    "babel-eslint": "^7.0.0",
+    "apollo-client": "^1.0.4",
+    "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.2",
     "babel-jest": "^19.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-2": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "colors": "^1.1.2",
-    "eslint": "^3.17.1",
+    "eslint": "^3.19.0",
     "graphql-tag": "^2.0.0",
     "jest-cli": "^19.0.2",
     "less": "^2.7.2",
-    "react": "^15.4.2",
-    "react-apollo-decorators": "^1.2.1",
-    "react-dom": "^15.4.2",
+    "react": "^15.5.4",
+    "react-apollo": "^1.0.1",
+    "react-apollo-decorators": "^1.2.3",
+    "react-dom": "^15.5.4",
     "react-router": "^3.0.1",
-    "react-select": "1.0.0-rc.2",
-    "standard": "^9.0.1",
-    "react-apollo": "^1.0.0"
+    "react-select": "^1.0.0-rc.3",
+    "standard": "^10.0.2"
   },
   "peerDependencies": {
     "apollo-client": "^1.0.1",
@@ -49,17 +49,17 @@
     "react-select": "^1.0.0-rc.2"
   },
   "dependencies": {
-    "autobind-decorator": "^1.3.4",
+    "autobind-decorator": "^1.4.0",
     "boron": "^0.2.3",
-    "lodash": "^4.17.3",
-    "object-path": "^0.11.3",
-    "react-autocomplete": "^1.4.0",
+    "lodash": "^4.17.4",
+    "object-path": "^0.11.4",
+    "react-autocomplete": "^1.4.4",
     "react-icons": "^2.2.3",
     "react-ios-switch": "^0.1.10",
-    "react-notification-system": "^0.2.11",
-    "react-sortable-hoc": "^0.5.0",
-    "react-tooltip": "^3.2.3",
-    "reactcss": "^1.1.1",
-    "simple-react-form": "^1.8.1"
+    "react-notification-system": "^0.2.13",
+    "react-sortable-hoc": "^0.6.2",
+    "react-tooltip": "^3.3.0",
+    "reactcss": "^1.2.2",
+    "simple-react-form": "^1.9.1"
   }
 }
