--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "orionsoft-parts",
-  "version": "1.6.0",
+  "version": "1.6.1",
   "main": "index.js",
   "repository": "http://github.com/orionsoft/parts",
   "author": "nicolaslopezj",
@@ -26,6 +26,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "colors": "^1.1.2",
     "eslint": "^3.19.0",
+    "eslint-config-orionsoft": "^1.2.1",
     "graphql-tag": "^2.2.2",
     "jest-cli": "^20.0.4",
     "less": "^2.7.2",
