--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "orionsoft-parts",
-  "version": "1.6.3",
+  "version": "1.7.0",
   "main": "index.js",
   "repository": "http://github.com/orionsoft/parts",
   "author": "nicolaslopezj",
@@ -16,28 +16,27 @@
     "lint": "standard \"src/**/*.js\""
   },
   "devDependencies": {
-    "apollo-client": "^1.4.0",
-    "babel-cli": "^6.24.1",
-    "babel-eslint": "^7.2.3",
-    "babel-jest": "^20.0.3",
+    "apollo-client": "^1.9.3",
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.0.1",
+    "babel-jest": "^21.2.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "colors": "^1.1.2",
-    "eslint": "^3.19.0",
+    "eslint": "^4.7.2",
     "eslint-config-orionsoft": "^1.2.1",
-    "graphql-tag": "^2.2.2",
-    "jest-cli": "^20.0.4",
+    "graphql-tag": "^2.4.2",
+    "jest-cli": "^21.2.1",
     "less": "^2.7.2",
-    "react": "^15.5.4",
-    "react-apollo": "^1.4.2",
-    "react-apollo-decorators": "^1.3.3",
-    "react-dom": "^15.5.4",
+    "react": "^16.0.0",
+    "react-apollo": "^1.4.16",
+    "react-apollo-decorators": "^1.4.11",
+    "react-dom": "^16.0.0",
     "react-router": "^3.0.1",
-    "react-select": "^1.0.0-rc.5",
-    "standard": "^10.0.2"
+    "react-select": "^1.0.0-rc.10"
   },
   "peerDependencies": {
     "apollo-client": "^1.0.1",
@@ -51,17 +50,17 @@
     "react-select": "^1.0.0-rc.2"
   },
   "dependencies": {
-    "autobind-decorator": "^1.4.1",
+    "autobind-decorator": "^2.1.0",
     "boron": "^0.2.3",
     "lodash": "^4.17.4",
     "object-path": "^0.11.4",
-    "react-autocomplete": "^1.5.6",
+    "prop-types": "^15.6.0",
+    "react-autocomplete": "^1.7.1",
     "react-icons": "^2.2.5",
-    "react-ios-switch": "^0.1.10",
-    "react-notification-system": "^0.2.14",
-    "react-sortable-hoc": "^0.6.3",
+    "react-ios-switch": "^0.1.19",
+    "react-notification-system": "^0.2.15",
+    "react-sortable-hoc": "^0.6.7",
     "react-tooltip": "^3.3.0",
-    "reactcss": "^1.2.2",
-    "simple-react-form": "^1.9.1"
+    "simple-react-form": "^2.0.0"
   }
 }
