tabs menu improved

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "orionsoft-parts",
-  "version": "1.7.7",
+  "version": "1.8.0",
   "main": "index.js",
   "repository": "http://github.com/orionsoft/parts",
   "author": "nicolaslopezj",
@@ -27,7 +27,10 @@
     "babel-preset-stage-2": "^6.24.1",
     "colors": "^1.1.2",
     "eslint": "^4.8.0",
-    "eslint-config-orionsoft": "^1.2.1",
+    "eslint-config-orionsoft": "^1.2.7",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.2.0",
+    "eslint-plugin-react": "^7.4.0",
     "graphql-tag": "^2.4.2",
     "jest-cli": "^21.2.1",
     "less": "^2.7.2",
