--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "orionsoft-parts",
-  "version": "1.8.2",
+  "version": "1.9.0",
   "main": "index.js",
   "repository": "http://github.com/orionsoft/parts",
   "author": "nicolaslopezj",
@@ -38,7 +38,7 @@
     "react-apollo": "^1.4.16",
     "react-apollo-decorators": "^1.4.11",
     "react-dom": "^16.0.0",
-    "react-router": "^3.0.1",
+    "react-router-dom": "^4.2.2",
     "react-select": "^1.0.0-rc.10"
   },
   "peerDependencies": {
@@ -49,7 +49,7 @@
     "react-apollo": "^1.0.0",
     "react-apollo-decorators": "^1.2.1",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.1",
+    "react-router-dom": "^4.2.2",
     "react-select": "^1.0.0-rc.2"
   },
   "dependencies": {
