--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   "devDependencies": {
     "apollo-client": "^1.9.3",
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.0.0",
     "babel-eslint": "^8.0.1",
-    "babel-jest": "^21.2.0",
+    "babel-jest": "^22.4.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
@@ -36,7 +37,7 @@
     "less": "^2.7.2",
     "react": "^16.0.0",
     "react-apollo": "^1.4.16",
-    "react-apollo-decorators": "^1.4.11",
+    "react-apollo-decorators": "^1.4.26",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
     "react-select": "^1.0.0-rc.10"
@@ -45,10 +46,10 @@
     "apollo-client": "^1.0.1",
     "graphql-tag": "^2.0.0",
     "moment": "^2.17.1",
-    "react": "^15.4.2",
+    "react": "^16.0.0",
     "react-apollo": "^1.0.0",
-    "react-apollo-decorators": "^1.2.1",
-    "react-dom": "^15.4.2",
+    "react-apollo-decorators": "^1.4.26",
+    "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
     "react-select": "^1.0.0-rc.2"
   },
@@ -61,7 +62,7 @@
     "react-autocomplete": "^1.7.1",
     "react-icons": "^2.2.7",
     "react-ios-switch": "^0.1.19",
-    "react-notification-system": "^0.2.15",
+    "react-notification-system": "^0.2.16",
     "react-sortable-hoc": "^0.6.8",
     "react-tooltip": "^3.3.1",
     "simple-react-form": "^2.0.1"
