--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "orionsoft-parts",
-  "version": "1.9.6",
+  "version": "1.10.0",
   "main": "index.js",
   "repository": "http://github.com/orionsoft/parts",
   "author": "nicolaslopezj",
   "license": "MIT",
   "scripts": {
     "build": "rm -rf ./lib && babel ./src --out-dir ./lib && yarn run build-styles",
-    "build-styles":
-      "find src/ -name '*.less' ! -name '*import.less' -exec lessc {} \\; > ./lib/styles.css",
+    "build-styles": "find src/ -name '*.less' ! -name '*import.less' -exec lessc {} \\; > ./lib/styles.css",
     "prepublish": "yarn run build",
     "test": "yarn run lint && jest",
     "watch": "node watch.js",
@@ -16,31 +15,31 @@
     "lint": "standard \"src/**/*.js\""
   },
   "devDependencies": {
-    "apollo-client": "^1.9.3",
+    "apollo-client": "^2.3.5",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.0.0",
-    "babel-eslint": "^8.0.1",
-    "babel-jest": "^22.4.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.5",
+    "babel-jest": "^23.2.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "colors": "^1.1.2",
-    "eslint": "^4.8.0",
-    "eslint-config-orionsoft": "^1.2.7",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.2.0",
-    "eslint-plugin-react": "^7.4.0",
-    "graphql-tag": "^2.4.2",
-    "jest-cli": "^21.2.1",
-    "less": "^2.7.2",
-    "react": "^16.0.0",
-    "react-apollo": "^1.4.16",
-    "react-apollo-decorators": "^1.4.26",
-    "react-dom": "^16.0.0",
-    "react-router-dom": "^4.2.2",
-    "react-select": "^1.0.0-rc.10"
+    "colors": "^1.3.0",
+    "eslint": "^5.0.1",
+    "eslint-config-orionsoft": "^1.2.8",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-react": "^7.10.0",
+    "graphql-tag": "^2.9.2",
+    "jest-cli": "^23.2.0",
+    "less": "^3.0.4",
+    "react": "^16.4.1",
+    "react-apollo": "^2.1.8",
+    "react-apollo-decorators": "^1.4.28",
+    "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
+    "react-select": "^1.2.1"
   },
   "peerDependencies": {
     "apollo-client": "^1.0.1",
@@ -56,15 +55,15 @@
   "dependencies": {
     "autobind-decorator": "^2.1.0",
     "boron": "^0.2.3",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.10",
     "object-path": "^0.11.4",
-    "prop-types": "^15.6.0",
-    "react-autocomplete": "^1.7.1",
+    "prop-types": "^15.6.2",
+    "react-autocomplete": "^1.8.1",
     "react-icons": "^2.2.7",
     "react-ios-switch": "^0.1.19",
-    "react-notification-system": "^0.2.16",
-    "react-sortable-hoc": "^0.6.8",
-    "react-tooltip": "^3.3.1",
-    "simple-react-form": "^2.0.1"
+    "react-notification-system": "^0.2.17",
+    "react-sortable-hoc": "^0.8.3",
+    "react-tooltip": "^3.6.1",
+    "simple-react-form": "^2.1.3"
   }
 }
