--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "build": "rm -rf ./lib && babel ./src --out-dir ./lib && yarn run build-styles",
-    "build-styles": "find src/ -name '*.less' ! -name '*import.less' -exec lessc {} \\; > ./lib/styles.css",
+    "build-styles":
+      "find src/ -name '*.less' ! -name '*import.less' -exec lessc {} \\; > ./lib/styles.css",
     "prepublish": "yarn run build",
     "test": "yarn run lint && jest",
     "watch": "node watch.js",
@@ -50,7 +51,8 @@
     "react-apollo-decorators": "^1.4.26",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
-    "react-select": "^1.0.0-rc.2"
+    "react-select": "^1.0.0-rc.2",
+    "simple-react-form": "^2.1.3"
   },
   "dependencies": {
     "autobind-decorator": "^2.1.0",
@@ -63,7 +65,6 @@
     "react-ios-switch": "^0.1.19",
     "react-notification-system": "^0.2.17",
     "react-sortable-hoc": "^0.8.3",
-    "react-tooltip": "^3.6.1",
-    "simple-react-form": "^2.1.3"
+    "react-tooltip": "^3.6.1"
   }
 }
