--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "orionsoft-parts",
-  "version": "1.11.2",
+  "version": "1.11.3",
   "main": "index.js",
   "repository": "http://github.com/orionsoft/parts",
   "author": "nicolaslopezj",
@@ -42,15 +42,15 @@
     "react-select": "^1.2.1"
   },
   "peerDependencies": {
-    "apollo-client": "^1.0.1",
-    "graphql-tag": "^2.0.0",
+    "apollo-client": "^2.3.5",
+    "graphql-tag": "^2.9.2",
     "moment": "^2.17.1",
-    "react": "^16.0.0",
-    "react-apollo": "^1.0.0",
-    "react-apollo-decorators": "^1.4.26",
-    "react-dom": "^16.0.0",
-    "react-router-dom": "^4.2.2",
-    "react-select": "^1.0.0-rc.2",
+    "react": "^16.4.1",
+    "react-apollo": "^2.1.8",
+    "react-apollo-decorators": "^1.4.28",
+    "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
+    "react-select": "^1.2.1",
     "simple-react-form": "^2.1.3"
   },
   "dependencies": {
