--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-react": "^7.11.1",
+    "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "jest-cli": "^23.6.0",
     "less": "^3.8.1",
@@ -39,7 +40,8 @@
     "react-apollo-decorators": "^2.0.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
-    "react-select": "^2.1.0"
+    "react-select": "^2.1.0",
+    "simple-react-form": "^2.2.1"
   },
   "peerDependencies": {
     "apollo-client": "^2.3.5",
