--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@getjusto/parts",
+  "name": "@justodev/parts",
   "version": "1.19.3",
   "main": "index.js",
   "repository": "http://github.com/getjusto/parts",
