--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
   "peerDependencies": {
     "apollo-client": "^2.3.5",
     "graphql-tag": "^2.9.2",
-    "moment": "^2.17.1",
     "react": "^16.4.1",
     "react-apollo": "^2.1.8",
     "react-apollo-decorators": "^1.4.28",
@@ -59,6 +58,7 @@
   "dependencies": {
     "autobind-decorator": "^2.1.0",
     "boron": "^0.2.3",
+    "dayjs": "^1.10.4",
     "lodash": "^4.17.11",
     "object-path": "^0.11.4",
     "prop-types": "^15.6.2",
